--- a/Pipfile
+++ b/Pipfile
@@ -6,7 +6,7 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-tensorflow = "*"
+tensorflow-macos = "*"
 opencv-contrib-python = "*"
 argparse = "*"
 graphviz = "*"
