--- a/Pipfile
+++ b/Pipfile
@@ -7,7 +7,7 @@ verify_ssl = true
 
 [packages]
 tensorflow = "*"
-opencv-contrib-python = "*"
+opencv-python = "*"
 argparse = "*"
 graphviz = "*"
 pydot = "*"
